Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a name="visual-awr" class="anchor" href="#visual-awr"><span class="octicon octicon-link"></span></a>visual-awr</h1>
 
-<p>visualize Oracle AWR performance metrics using this fine grained charting tool.  Right now this is a private Git repository.  If you would like access, please contact me through github.</p>
+<p>Visualize Oracle AWR performance metrics using this fine grained charting tool.  Right now this is a private Git repository.  If you would like access, please contact me through github.</p>
 
 <p>More information on VisualAWR, including a download of the latest release can be found at: <a href="http://visualawr.blogspot.com/">http://visualawr.blogspot.com/</a></p>
         </section>
