--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <aside id="sidebar">
 
-          <p class="repo-owner">This <a href="https://github.com/sfurlong/visual-awr">page </a> is maintained by <a href="https://github.com/sfurlong">sfurlong</a>.</p>
+          <p class="repo-owner">This page is maintained by <a href="http://visualawr.blogspot.com/">Steve Furlong</a>.</p>
 
         </aside>
       </div>
